crates/dbdict/tests/snapshots/validate_spec__s17_date_not_iso.snap
---
source: crates/dbdict/tests/validate_spec.rs
assertion_line: 776
---
$version: "0.1.0"
$learn_more: https://github.com/pjc-wspace/dbdict
version:
  date: "31/01/2024"
────────────────────────────────────────
error: [S17] A `version` `date` must be an ISO 8601 date (YYYY-MM-DD).
 --> dict.yaml:4:9
  |
3 | version:
4 |   date: "31/01/2024"
  |         ^^^^^^^^^^ `31/01/2024` is not an ISO 8601 date
